[bugfix] fix z-index for paypal button

--- a/src/app/@pages/user/userPage.component.scss
+++ b/src/app/@pages/user/userPage.component.scss
@@ -31,7 +31,8 @@
 			}
 		}
 		.user-profile-left {
-		    margin-top: .5em;
+      z-index: 20;
+      margin-top: .5em;
 			float: none;
 			.card-img-top {
 			    margin: .5em;
